// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders a Header by default 1`] = `
<Fragment>
  <nav
    className="Header__nav"
  >
    <h1>
      <Link
        to="/"
      >
        Music Books Review
      </Link>
    </h1>
    <span
      className="Header__tagline--wide"
    >
      For Students, Educators, and Parents!
    </span>
  </nav>
  <span
    className="Header__tagline--narrow"
  >
    For Students, Educators, and Parents!
  </span>
  <div
    className="browse-and-search-container"
  >
    <div
      className="search-bar-container"
    >
       
       
    </div>
    <div
      className="show-dropdown"
    >
      <BrowseDropdown
        history={
          Object {
            "push": [Function],
          }
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`Header component renders the UI as expected 1`] = `
Array [
  <nav
    className="Header__nav"
  >
    <h1>
      <a
        href="/"
        onClick={[Function]}
      >
        Music Books Review
      </a>
    </h1>
    <span
      className="Header__tagline--wide"
    >
      For Students, Educators, and Parents!
    </span>
  </nav>,
  <span
    className="Header__tagline--narrow"
  >
    For Students, Educators, and Parents!
  </span>,
  <div
    className="browse-and-search-container"
  >
    <div
      className="search-bar-container"
    >
       
      
       
    </div>
    <div
      className="show-dropdown"
    >
      <div
        className="dropdown"
      >
        <div
          className="button"
          onClick={[Function]}
        >
          Browse
        </div>
      </div>
    </div>
  </div>,
]
`;
